# ToDoList

./: .env  .env.example  .pre-commit-config.yaml  .pre-commit-config.yaml.py  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: action.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_tg_username_alter_tguser_user.py
bot/tg/: dc.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0002_goal_alter_goalcategory_created_and_more.py  0003_board_goalcategory_board_boardparticipant.py  0005_alter_goalcategory_board.py
tests/: factories.py  fixtures.py  simple_test.py
tests/test_views/board/: list_test.py
tests/test_views/goal/: create_test.py  detail_test.py  update_test.py
tests/test_views/goal_category/: create_test.py  detail_test.py  list_test.py
tests/test_views/goal_comment/: create_test.py  list_test.py
todolist/: settings.py  urls.py
todolist/core/: models.py  serializers.py  views.py
todolist/core/migrations/: 0001_initial.py
